kustomize/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vigo-auth-organisation-selector
spec:
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: vigo-auth-organisation-selector
          image: ghcr.io/fintlabs/vigo-auth-organisation-selector:sha-0000000
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
